[gd_scene load_steps=8 format=3 uid="uid://bt73ltasctf00"]

[ext_resource type="Script" uid="uid://c60msmgn431f1" path="res://scripts/minigame/item.gd" id="1_viss7"]
[ext_resource type="Shader" uid="uid://delhrbijxnvgm" path="res://scripts/shaders/pixel_outline.gdshader" id="2_jmpw5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ou6s"]
shader = ExtResource("2_jmpw5")
shader_parameter/outline_color = Color(1, 0.933333, 0.8, 1)
shader_parameter/corner_pixel = true
shader_parameter/visible = true

[sub_resource type="CircleShape2D" id="CircleShape2D_jmpw5"]
radius = 8.0

[sub_resource type="Animation" id="Animation_4ou6s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.3, 1.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jmpw5"]
resource_name = "accepted"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(1.1, 1.5), Vector2(1.5, 1.1), Vector2(1.3, 1.3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ou6s"]
_data = {
&"RESET": SubResource("Animation_4ou6s"),
&"accepted": SubResource("Animation_jmpw5")
}

[node name="ItemInstance" type="Node2D"]
script = ExtResource("1_viss7")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_4ou6s")
scale = Vector2(1.3, 1.3)
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_jmpw5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4ou6s")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
